# research-workflow-kit

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_MEMORY.md  README.md  SCIENTIFIC_WORKFLOW_START_HERE.html  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: quality.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_ROADMAP.html  DEPENDENCIES.md  INSTALL.md  NAME_MAP.md  START_HERE.html  THIRD_PARTY_MANIFEST.json  THIRD_PARTY_NOTICES.md  WORKFLOW.md
docs/licenses/: academic-writing-assistant-license.txt
examples/minimal/: evidence_card.jsonl  guide.md
scripts/: verify_publish_tree.py
skills/academic-editing/: SKILL.md
skills/academic-editing/agents/: openai.yaml
skills/academic-editing/assets/: terminology-map.zh-en.json
skills/academic-editing/references/: citation-safety.md  examples.md  field-adapter.md  output-templates.md  quality-checklist.md  reviewer-response.md  style-guide-en.md  style-guide-zh.md  (+3 more)
skills/longform-writing/: SKILL.md
skills/proposal-iteration/: SKILL.md
skills/proposal-research/: SKILL.md
skills/prose-lint/: SKILL.md
skills/research-methods/: COMPATIBILITY.md  LINEAGE_INDEX.md  MODE_REGISTRY.md  NOTICE.md  SKILL.md  manifest.json
skills/scientific-workflow-lab-lite/: SKILL.md
skills/workflow-router/: SKILL.md
src/workflow_lab/: __init__.py  __main__.py  cli.py  contracts.py  process.py
tests/: conftest.py  test_adapters.py  test_templates.py
(+116 files in other folders)
